# testrpi

./: .gitignore  Readme.html  Readme.md  install.sh  main.c  meson.build  tinyc.pro
gpio/: 0temp.c  get_line_value.c  meson.build  testcmd.pro
gpio/examples/: get_line_value.c
hd44780/: 0temp.c  hd44780.c  hd44780.h  main.c  meson.build  testcmd.pro
i2c/: i2c_funcs.h
lib/: libgpio.h  libi2c.h  msleep.h
mcp9808/: 0temp.c  main.c  mcp9808.c  mcp9808.h  meson.build  testcmd.pro
sh1106/: 0temp.c  BitBang_I2C.c  BitBang_I2C.h  global.h  i2c_funcs.h  main.c  meson.build  ss_oled.c  ss_oled.h  testcmd.pro
sh1106/other/: BitBang_I2C.c  BitBang_I2C.h
